# BottleVision

./: .gitignore  M5_TEST_REPORT.md  README.md  RELEASE_NOTES_M5.md  ROADMAP.md  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: architecture.md  known-limitations.md
scripts/: detect_image.py  run_webcam.py
src/bottlevision/: __init__.py  annotator.py  camera.py  config.py  detection.py  detector.py  diagnostics.py  display.py  geometry.py  pipeline.py  postprocess.py  tracker.py
src/bottlevision/utils/: __init__.py  fps.py  logging.py
tests/: test_annotator.py  test_config.py  test_postprocess.py
tests/data/: .gitkeep
